# storage/api-docs/api-docs.json
@@ -17,6 +17,7 @@
                 ],
                 "summary": "Get only draft data",
                 "description": "Get only draft data",
+                "operationId": "App\\Modules\\SeoAgent\\Controllers\\Api\\V1\\SeoAgentApiController::getOnlyDraftData",
                 "parameters": [
                     {
                         "name": "per_page",
@@ -56,6 +57,7 @@
                 ],
                 "summary": "Get current data by HASH",
                 "description": "Get current data by HASH",
+                "operationId": "App\\Modules\\SeoAgent\\Controllers\\Api\\V1\\SeoAgentApiController::getCurrentDataByHash",
                 "parameters": [
                     {
                         "name": "hash",
@@ -118,6 +120,7 @@
                 ],
                 "summary": "Create a new current meta data entity",
                 "description": "Create a new current meta data entity",
+                "operationId": "App\\Modules\\SeoAgent\\Controllers\\Api\\V1\\SeoAgentApiController::createCurrentData",
                 "requestBody": {
                     "description": "Data required to create it",
                     "required": true,
@@ -154,6 +157,77 @@
                                 }
                             }
                         }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Update a resource"
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/seoagent/v1/draft-data/{hash}/status": {
+            "put": {
+                "tags": [
+                    "Current Data"
+                ],
+                "summary": "Create a new current meta data entity",
+                "description": "Create a new current meta data entity",
+                "operationId": "App\\Modules\\SeoAgent\\Controllers\\Api\\V1\\SeoAgentApiController::updateStatus",
+                "parameters": [
+                    {
+                        "name": "hash",
+                        "in": "path",
+                        "description": "ID of resource to return",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Data required to create it",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "status": {
+                                        "description": "Updated status of the pet",
+                                        "type": "string"
+                                    },
+                                    "comments": {
+                                        "description": "comments",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Update a resource"
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/seoagent/v1/deleteMetaData": {
+            "put": {
+                "tags": [
+                    "Recovery"
+                ],
+                "summary": "Create a new current meta data entity",
+                "description": "Create a new current meta data entity",
+                "operationId": "App\\Modules\\SeoAgent\\Controllers\\Api\\V1\\SeoAgentApiController::deleteAllData",
+                "requestBody": {
+                    "description": "Data required to create it",
+                    "required": true,
+                    "content": {
+                        "application/json": {}
                     }
                 },
                 "responses": {
@@ -281,18 +355,22 @@
                 "properties": {
                     "title": {
                         "schema": "MetaSchemaEloquent",
+                        "description": "App\\Modules\\SeoAgent\\Models\\MetaSchemaEloquent",
                         "type": "string"
                     },
                     "description": {
                         "schema": "MetaSchemaEloquent",
+                        "description": "App\\Modules\\SeoAgent\\Models\\MetaSchemaEloquent",
                         "type": "string"
                     },
                     "canonical": {
                         "schema": "MetaSchemaEloquent",
+                        "description": "App\\Modules\\SeoAgent\\Models\\MetaSchemaEloquent",
                         "type": "string"
                     },
                     "keywords": {
                         "schema": "MetaSchemaEloquent",
+                        "description": "App\\Modules\\SeoAgent\\Models\\MetaSchemaEloquent",
                         "type": "array",
                         "items": {
                             "type": "string"
@@ -305,14 +383,17 @@
                 "properties": {
                     "path": {
                         "schema": "SeoAgentBaseModel",
+                        "description": "App\\Modules\\SeoAgent\\Models\\SeoAgentBaseModel",
                         "type": "string"
                     },
                     "hash": {
                         "schema": "SeoAgentBaseModel",
+                        "description": "App\\Modules\\SeoAgent\\Models\\SeoAgentBaseModel",
                         "type": "string"
                     },
                     "current_data": {
                         "schema": "SeoAgentBaseModel",
+                        "description": "App\\Modules\\SeoAgent\\Models\\SeoAgentBaseModel",
                         "properties": {
                             "title": {
                                 "description": "",
